Enhance layout and styling: update App.css and SearchUsers.module.css for improved overflow handling; adjust UserList.module.css for consistent scrolling behavior; refine index.css to prevent overflow in body and root elements.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,11 +8,16 @@
   box-sizing: border-box;
 }
 
+body, #root {
+  overflow: hidden;
+}
+
 .content {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-grow: 10;
+  scrollbar-width: none;
 }
 
 .logo {
