--- a/client/src/components/userList/UserList.module.css
+++ b/client/src/components/userList/UserList.module.css
@@ -4,7 +4,9 @@
     align-items: center;
     height: 100vh;
     width: 100%;
-    overflow-y: scroll;
+    overflow-x: hidden;
+    overflow-y: auto;
+    scrollbar-width: none;
 }
 
 .userListContainer h1 {
