--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,8 @@ html, body, #root {
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow: hidden;
+    scrollbar-width: none;
 }
 
 :root {
@@ -23,6 +25,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -33,6 +36,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 h1 {
